JumpScript/tests/baselines/reference/parserMemberAccessorDeclaration2.errors.txt
tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration2.jump(2,7): error TS2378: A 'get' accessor must return a value.


==== tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration2.jump (1 errors) ====
    class C {
      get "b"() { }
          ~~~
!!! error TS2378: A 'get' accessor must return a value.
    }